methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:1: error: '(' expected but identifier found.
def haveBaggle():Boolean = { while !vuBiscuit() {droite()
                                   ^MethodsReturning:4: error: illegal start of simple expression
} 
^