methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = { while !vuBiscuit() {droite()
                                                avance()
                                                gauche()}
}